--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
         <meta property="og:site_name" content="PHP: The Right Way"/>
         <meta property="og:type" content="website"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-        <link rel="icon" href="{{ site.baseurl }}/images/favicon.png" type="image/png"/>
-        <link rel="stylesheet" href="{{ site.baseurl }}/styles/syntax.css">
+        <link rel="icon" href="{{ site.baseurl }}images/favicon.png" type="image/png"/>
+        <link rel="stylesheet" href="{{ site.baseurl }}styles/syntax.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=Fira+Sans:ital,wght@0,300;0,400;0,500;1,400&display=swap" rel="stylesheet">
